Fix the sign in dialog to prevent line wrapping "Link Identity" button
Firefox 3 by default on my system is using a wider font, resulting in
the "Link Identity" button wrapping onto the next line.  Instead allow
the dialog to take the space required for its content.

--- a/src/main/java/com/google/gerrit/client/GerritCss.css
+++ b/src/main/java/com/google/gerrit/client/GerritCss.css
@@ -859,6 +859,7 @@
 /** OpenIdLoginPanel **/
 .gerrit-OpenID-loginform {
   margin-left: 10px;
+  margin-right: 10px;
 }
 
 .gerrit-OpenID-logobox {
@@ -868,6 +869,9 @@
 
 .gerrit-OpenID-loginline {
   margin-bottom: 10px;
+}
+.gerrit-OpenID-loginline div {
+  white-space: nowrap;
 }
 
 .gerrit-OpenID-openid_identifier {
